# os_laba2_var2

./: .gitignore  CMakeLists.txt
Client/: CMakeLists.txt  main.cpp
Common/: CMakeLists.txt
Common/include/: os2var2_common.h  utils.h
Server/: CMakeLists.txt  main.cpp
WinsockTest/: CMakeLists.txt  main.cpp
